# blog_posts

./: .gitignore  LICENSE.html
2018-04-19-image_redaction_with_imagemagick/: README.md  index.md
2018-04-20-tabs_to_spaces/: README.md
2020-06-03-tmux_vi_zen/: README.md
2020-06-04-repo_layout/: README.md
2020-06-27-infra_thoughts/: .README.md.swp  README.md
2021-09-01-bad_bash_code/: README.md  bad.sh  better.sh  output.txt
2023-02-21-convert_NIST_doc_to_readable_thing/: NIST.SP.800-218.SSDF-table.csv  README.md  build_md_presentation.sh  nist_cyber_security_framework_process.pl  nist_cyber_security_framework_process2.pl  nist_cybersecurity_framework_2018.md  nist_practice_groups.md  notes.md  practice_groups_and_descriptions-distilled.md  practice_groups_and_descriptions.md  process.pl
2023-05-01-decommissioning_things/: Decommissioning_things.md  aspell_project.pws  server_provisioning.md  server_provisioning_planner.planner
2023-05-10-package_shell_walkthrough/: 2023-05-10-package_shell_walkthrough.md  aspell_project.pws
2023-05-15-build_ramblings/: 2023-05-15-build_ramblings.md
2023-06-20-vms_and_encryption/: 2023-06-20-vms_and_encryption.md
2023-07-09-git_environment_setup/: 2023-07-09-setting_up_git_accounts.md
2023-08-02-firewall_musings/: readme.md
2023-08-02-url_uri_analysis/: make_apc_info.pl  uri_parse2.pl
2023-08-16-download_google/: tutorial1.md  (+1 more)
2025-07-14-pyproject_toml/ias_network_sample_app1/: pyproject.toml  run_wrapper.sh
2025-07-14-pyproject_toml/ias_network_sample_app1/src/lib/python3/ias/network/: sample_app1.py
(+194 files in other folders)
